--- a/libxdp-sys/Cargo.toml
+++ b/libxdp-sys/Cargo.toml
@@ -5,11 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-
 [build-dependencies]
 anyhow = "1.0.71"
-bindgen = "0.65.1"
+bindgen = { version = "0.65.1", features = ["experimental"] }
 
 [lib]
 doctest = false
