--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -13,6 +13,7 @@ libbpf-rs = "0.20.1"
 libc = "0.2.142"
 nix = "0.26.2"
 thiserror = "1.0.40"
+log = "0.4.17"
 
 [build-dependencies]
 libbpf-cargo = "0.20.1"
