--- a/libxdp-sys/Cargo.toml
+++ b/libxdp-sys/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [build-dependencies]
 anyhow = "1.0.71"
 bindgen = { version = "0.65.1", features = ["experimental"] }
+which = "4.4.0"
 
 [lib]
 doctest = false
