test: enable unit test in ci

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "GitHub.copilot-nightly"
+                "GitHub.copilot-nightly",
+                "github.vscode-github-actions"
             ]
         }
     }
