--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,10 @@
             "packages": "ethtool,iputils-ping,iperf,iperf3,curl,build-essential,gcc-multilib,zlib1g-dev,libelf-dev,libpcap-dev,m4,libclang-dev,llvm,clang,pkg-config"
         }
     },
-    "runArgs": [ "--cap-add=NET_ADMIN", "--cap-add=NET_RAW", "--cap-add=SYS_PTRACE", "--cap-add=SYS_ADMIN", "--security-opt", "apparmor=unconfined", "--ulimit", "nofile=1048576:1048576" ],
+    "runArgs": [ "--cap-add=NET_ADMIN", "--cap-add=NET_RAW", "--cap-add=SYS_PTRACE", "--cap-add=SYS_ADMIN", "--security-opt", "apparmor=unconfined", "--ulimit", "nofile=1048576:1048576", "--ulimit", "memlock=67108864:67108864" ],
+    "containerEnv": {
+        "CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER": "sudo -E"
+    },
     "customizations": {
         "vscode": {
             "extensions": [
