--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -14,6 +14,8 @@ libc = "0.2.142"
 nix = "0.26.2"
 thiserror = "1.0.40"
 log = "0.4.17"
+once_cell = "1.17.1"
+env_logger = "0.10.0"
 
 [build-dependencies]
 libbpf-cargo = "0.20.1"
