--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -16,6 +16,7 @@ thiserror = "1.0.40"
 log = "0.4.17"
 once_cell = "1.17.1"
 env_logger = "0.10.0"
+etherparse = "0.13.0"
 
 [build-dependencies]
 libbpf-cargo = "0.20.1"
