--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,9 @@
     "features": {
         "ghcr.io/devcontainers/features/rust:1": {},
         "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
-            "packages": "ethtool,iputils-ping,iperf,iperf3,curl,build-essential,gcc-multilib,zlib1g-dev,libelf-dev,libpcap-dev,m4,libclang-dev,llvm,clang,pkg-config"
-        }
+            "packages": "ethtool,iputils-ping,iperf,iperf3,curl,build-essential,gcc-multilib,zlib1g-dev,libelf-dev,libpcap-dev,m4,libclang-dev,llvm,clang,pkg-config,tcpdump"
+        },
+        "ghcr.io/meaningful-ooo/devcontainer-features/fish:1": {}
     },
     "runArgs": [ "--cap-add=NET_ADMIN", "--cap-add=NET_RAW", "--cap-add=SYS_PTRACE", "--cap-add=SYS_ADMIN", "--security-opt", "apparmor=unconfined", "--ulimit", "nofile=1048576:1048576", "--ulimit", "memlock=67108864:67108864" ],
     "containerEnv": {
