--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,6 +9,9 @@
         "ghcr.io/meaningful-ooo/devcontainer-features/fish:1": {}
     },
     "runArgs": [ "--cap-add=NET_ADMIN", "--cap-add=NET_RAW", "--cap-add=SYS_PTRACE", "--cap-add=SYS_ADMIN", "--security-opt", "seccomp=unconfined", "--security-opt", "apparmor=unconfined", "--ulimit", "nofile=1048576:1048576", "--ulimit", "memlock=67108864:67108864"],
+    "mounts": [
+        "source=/dev/hugepages,target=/dev/hugepages,type=bind"
+    ],
     "containerEnv": {
         "CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER": "sudo -E"
     },
