--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -18,6 +18,7 @@ once_cell = "1.17.1"
 env_logger = "0.10.0"
 etherparse = "0.13.0"
 criterion = "0.4.0"
+rlimit = "0.9.1"
 
 [build-dependencies]
 libbpf-cargo = "0.20.1"
