--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -23,6 +23,9 @@ rlimit = "0.9.1"
 [build-dependencies]
 libbpf-cargo = "0.20.1"
 
+[dev-dependencies]
+core_affinity = "0.8.0"
+
 [[bench]]
 name = "forward"
 harness = false
