--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -19,6 +19,7 @@ env_logger = "0.10.0"
 etherparse = "0.13.0"
 criterion = "0.4.0"
 rlimit = "0.9.1"
+tempdir = "0.3.7"
 
 [build-dependencies]
 libbpf-cargo = "0.20.1"
