--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -20,6 +20,7 @@ etherparse = "0.13.0"
 criterion = "0.4.0"
 rlimit = "0.9.1"
 tempdir = "0.3.7"
+tracing = "0.1.37"
 
 [build-dependencies]
 libbpf-cargo = "0.20.1"
