deps: bump dependencies to 2024

--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -11,14 +11,14 @@ libxdp-sys = { path = "../libxdp-sys" }
 ctrlc = "3.2.5"
 libbpf-rs = "0.20.1"
 libc = "0.2.142"
-nix = "0.26.2"
+nix = { version = "0.28.0", features = ["poll", "mman", "event"]}
 thiserror = "1.0.40"
 log = "0.4.17"
 once_cell = "1.17.1"
-env_logger = "0.10.0"
-etherparse = "0.13.0"
-criterion = "0.4.0"
-rlimit = "0.9.1"
+env_logger = "0.11.3"
+etherparse = "0.14.3"
+criterion = "0.5.1"
+rlimit = "0.10.1"
 tempdir = "0.3.7"
 tracing = "0.1.37"
 
