--- a/test-utils/Cargo.toml
+++ b/test-utils/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-tempdir = "0.3.7"
 nix = { version = "0.28.0", features = ["mount", "sched", "net"]}
 anyhow = "1.0.71"
 once_cell = "1.17.1"
 log = "0.4.17"
 env_logger = "0.11.3"
+tempfile = "3.10.1"
