--- a/camellia/Cargo.toml
+++ b/camellia/Cargo.toml
@@ -21,6 +21,7 @@ criterion = "0.5.1"
 rlimit = "0.10.1"
 tracing = "0.1.37"
 humansize = "2.1.3"
+clap = { version = "4.5.7", features = ["derive"] }
 
 
 [dev-dependencies]
